--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -4,16 +4,18 @@
 
 # Name of your application. Used to uniquely configure containers.
 # This name will be used for container names, volumes, and network resources
-service: <%= ENV["KAMAL_APP_NAME"] %>
-
 # Load environment variables from .env file for dynamic configuration
 # This allows sensitive data to be kept out of version control
+# NOTE: Keep these commented out for CI/CD deployments
 # <% require "dotenv" %>
 # <% Dotenv.load(".env") %>
 
+service: <%= ENV["KAMAL_APP_NAME"] %>
+
+
 # Name of the container image.
 # This should match your Docker registry and image name
-image: <%= ENV["KAMAL_APP_NAME"] %>
+image: <%= ENV["KAMAL_IMAGE_NAME"] %>
 
 # Deploy to these servers.
 # Define different server roles for your application
@@ -45,8 +47,7 @@ proxy:
 # Configure access to your Docker registry (Docker Hub, GitHub Container Registry, etc.)
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  server: <%= ENV["KAMAL_REGISTRY_LOGIN_SERVER"] %>
+  # server: <%= ENV["KAMAL_REGISTRY_LOGIN_SERVER"] %>
   username: <%= ENV["KAMAL_REGISTRY_USERNAME"] %>
 
   # Always use an access token rather than real password (pulled from .kamal/secrets).
