refactor: :recycle: update comments on config file

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,20 +1,19 @@
 # Kamal Deployment Configuration
-# This file configures how your Nuxt.js application is deployed using Kamal
-# Kamal is a deployment tool that automates containerized app deployment
 
-# Name of your application. Used to uniquely configure containers.
-# This name will be used for container names, volumes, and network resources
-# Load environment variables from .env file for dynamic configuration
-# This allows sensitive data to be kept out of version control
-# NOTE: Keep these commented out for CI/CD deployments
+
+# Load environment variables from local .env file
+# Keep these commented out for CI/CD deployments
 # <% require "dotenv" %>
 # <% Dotenv.load(".env") %>
 
+
+# Name of your application. Used to uniquely configure containers.
+# This name will be used for container names, volumes, and network resources
 service: <%= ENV["KAMAL_APP_NAME"] %>
 
 
 # Name of the container image.
-# This should match your Docker registry and image name
+# Expected format is either "username/repo" for Docker Hub
 image: <%= ENV["KAMAL_IMAGE_NAME"] %>
 
 # Deploy to these servers.
@@ -145,7 +144,7 @@ accessories:
     env:
       clear:
         SCHEDULE:       "@hourly"
-        BACKUP_KEEP_DAYS: 1
+        BACKUP_KEEP_DAYS: 14
 
         # S3 / R2 configuration
         S3_REGION:            <%= ENV["S3_DEFAULT_REGION"] %>  # replace auto with DEFAULT_REGION env variable if needed (set to auto for R2)
